# TEST

./: .cursorignore  .cursorrules  .env  README.md
story_generator/: app.py  main.py  requirements.txt
story_generator/static/css/: style.css
test/: .cursorignore  python_basics.py
test/story_generator/: README.md  app.py  requirements.txt
test/story_generator/static/js/: main.js
test/story_generator/templates/: index.html
test/swufe_spider/: README.md  spider.py
test/swufe_spider/output/: swufe_news_20250521_142359.json  swufe_news_20250521_143209.json  swufe_news_20250521_143247.json
小程序开发/小程序测试/: 小程序的项目需求
插件开发/dify插件/添加文字/: README.md  silicon_text_on_image_plugin.py  text_on_image.difypkg  插件UI示意图.txt  插件需求
插件开发/dify插件/添加文字/text_on_image/: .difyignore  README.md  manifest.yaml  pyproject.toml
插件开发/dify插件/添加文字/text_on_image/provider/: text_on_image.py  text_on_image.yaml
插件开发/dify插件/添加文字/text_on_image/tools/: text_on_image.py  text_on_image.yaml
